<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home_btn" />
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_myprofile_btn" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help_btn" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout_btn" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_exit_btn" />
    </group>

</menu>
