<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhitish"
        android:fontFamily="sans-serif-condensed">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ActionBarThemeOverlay"
            app:popupTheme="@style/ActionBarPopupThemeOverlay"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myToolbar"
            android:id="@+id/logoBox"
            android:background="@color/colorMKSDriveGreen"
            android:paddingBottom="?attr/actionBarSize"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/page_name_height"
                android:layout_height="@dimen/page_name_height"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_login_1"
            android:textColor="@color/colorBluish"
            android:gravity="center"
            android:layout_below="@+id/logoBox"
            android:id="@+id/signupPage"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/info_text_view_border"
            android:padding="@dimen/page_info_padding"
            android:layout_marginLeft="@dimen/page_info_margin_left"
            android:layout_marginStart="@dimen/page_info_margin_left"
            android:layout_marginRight="@dimen/page_info_margin_left"
            android:layout_marginEnd="@dimen/page_info_margin_left"
            android:layout_marginTop="@dimen/page_info_margin_top"
            />
        <EditText
            android:id="@+id/email"
            android:layout_below="@+id/signupPage"
            android:inputType="textEmailAddress"
            android:hint="@string/activity_login_2"
            android:layout_marginTop="@dimen/first_box_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlackish"
            android:gravity="center"
            android:ems="10"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/form_field_rectangle"
            android:padding="@dimen/box_padding"
            android:layout_marginLeft="@dimen/box_margin_left"
            android:layout_marginStart="@dimen/box_margin_left"
            android:layout_marginRight="@dimen/box_margin_left"
            android:layout_marginEnd="@dimen/box_margin_left"
            android:textColor="@color/colorMKSDriveGreen"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:layout_below="@+id/email"
            android:inputType="textPassword"
            android:hint="@string/activity_login_3"
            android:layout_marginTop="@dimen/second_box_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlackish"
            android:gravity="center"
            android:ems="10"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/form_field_rectangle"
            android:padding="@dimen/box_padding"
            android:layout_marginLeft="@dimen/box_margin_left"
            android:layout_marginStart="@dimen/box_margin_left"
            android:layout_marginRight="@dimen/box_margin_left"
            android:layout_marginEnd="@dimen/box_margin_left"
            android:textColor="@color/colorMKSDriveGreen"
            android:autofillHints="" />
        <ToggleButton
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:background="#fafafa"
            android:textColor="@color/colorMKSDriveGreen"
            android:textSize="12sp"
            android:id="@+id/checkBox"
            android:textOn="@string/activity_login_8"
            android:textOff="@string/activity_login_9"
            android:layout_alignEnd="@+id/password"
            android:layout_alignBottom="@+id/password"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/checkBox3"
            android:layout_below="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_7"
                android:id="@+id/checkBox2"
                android:layout_weight="1"
                android:textColor="@color/colorMKSDriveGreen"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_5"
                android:textStyle="bold"
                android:textColor="@color/colorMKSDriveGreen"
                android:background="@color/colorWhitish"
                android:id="@+id/forgotpassword"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox3"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/navButtons">
            <Button
                android:id="@+id/login"
                android:text="@string/activity_login_4"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/btn_margin_top"
                android:layout_marginBottom="@dimen/btn_margin_bottom"
                android:layout_width="@dimen/btn_confirm_width"
                android:layout_height="@dimen/btn_confirm_width"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@drawable/confirm_button" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>