<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhitish"
        android:fontFamily="sans-serif-condensed">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ActionBarThemeOverlay"
            app:popupTheme="@style/ActionBarPopupThemeOverlay"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myToolbar"
            android:id="@+id/logoBox"
            android:background="@color/colorMKSDriveGreen"
            android:paddingBottom="?attr/actionBarSize"
            android:gravity="center">
            <ImageView
                android:layout_width="@dimen/page_name_height"
                android:layout_height="@dimen/page_name_height"
                android:layout_gravity="center"
                android:contentDescription="@string/image_text"
                android:src="@drawable/message"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_forgotpassword_1"
            android:textColor="@color/colorBluish"
            android:gravity="center"
            android:layout_below="@+id/logoBox"
            android:id="@+id/textView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/info_text_view_border"
            android:padding="@dimen/page_info_padding"
            android:layout_marginLeft="@dimen/page_info_margin_left"
            android:layout_marginStart="@dimen/page_info_margin_left"
            android:layout_marginRight="@dimen/page_info_margin_left"
            android:layout_marginEnd="@dimen/page_info_margin_left"
            android:layout_marginTop="@dimen/page_info_margin_top"
            />
        <EditText
            android:id="@+id/otp"
            android:layout_below="@+id/textView"
            android:inputType="phone"
            android:hint="@string/activity_forgotpassword_2"
            android:layout_marginTop="@dimen/first_box_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlackish"
            android:gravity="center"
            android:ems="10"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/form_field_rectangle"
            android:padding="@dimen/box_padding"
            android:layout_marginLeft="@dimen/box_margin_left"
            android:layout_marginStart="@dimen/box_margin_left"
            android:layout_marginRight="@dimen/box_margin_left"
            android:layout_marginEnd="@dimen/box_margin_left"
            android:textColor="@color/colorMKSDriveGreen"
            android:autofillHints="" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp"
            android:layout_alignEnd="@+id/otp"
            android:text="@string/activity_forgotpassword_5"
            android:textStyle="bold"
            android:textColor="@color/colorMKSDriveGreen"
            android:background="@color/colorWhitish"
            android:id="@+id/resend"/>
        <EditText
            android:id="@+id/newPassword"
            android:layout_below="@+id/resend"
            android:inputType="textPassword"
            android:hint="@string/activity_forgotpassword_3"
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlackish"
            android:gravity="center"
            android:ems="10"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/form_field_rectangle"
            android:padding="@dimen/box_padding"
            android:layout_marginLeft="@dimen/box_margin_left"
            android:layout_marginStart="@dimen/box_margin_left"
            android:layout_marginRight="@dimen/box_margin_left"
            android:layout_marginEnd="@dimen/box_margin_left"
            android:textColor="@color/colorMKSDriveGreen"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/newPassword"
            android:layout_marginTop="@dimen/btn_login_margin_top"
            android:layout_marginBottom="@dimen/btn_login_margin_top"
            android:id="@+id/navButtons">
            <Button
                android:textStyle="bold"
                android:layout_marginTop="@dimen/btn_margin_top"
                android:layout_marginBottom="@dimen/btn_margin_bottom"
                android:layout_width="@dimen/btn_confirm_width"
                android:layout_height="@dimen/btn_confirm_width"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@drawable/confirm_button"
                android:text="@string/activity_forgotpassword_4"
                android:id="@+id/verify"
                android:layout_marginLeft="@dimen/btn_login_margin_left"
                android:layout_marginRight="@dimen/btn_login_margin_left"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>