<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhitish"
        android:fontFamily="sans-serif-condensed">
        <android.support.v7.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ActionBarThemeOverlay"
            app:popupTheme="@style/ActionBarPopupThemeOverlay"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myToolbar"
            android:paddingBottom="?attr/actionBarSize"
            android:id="@+id/head"
            android:background="@color/colorMKSDriveGreen">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/page_name_height"
                android:fontFamily="sans-serif"
                android:text="@string/activity_filerequestbyemail_1"
                android:gravity="center"
                android:textAllCaps="true"
                android:id="@+id/changePasswordText"
                android:textColor="@color/colorWhite"
                android:background="@color/colorMKSDriveGreen"
                android:textSize="@dimen/page_name_text_size"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/activity_filerequestbyemail_2"
            android:textColor="@color/colorBluish"
            android:gravity="center"
            android:layout_below="@+id/head"
            android:id="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/info_text_view_border"
            android:padding="@dimen/page_info_padding"
            android:layout_marginLeft="@dimen/page_info_margin_left"
            android:layout_marginStart="@dimen/page_info_margin_left"
            android:layout_marginRight="@dimen/page_info_margin_left"
            android:layout_marginEnd="@dimen/page_info_margin_left"
            android:layout_marginTop="@dimen/page_info_margin_top"
            />

        <EditText
            android:id="@+id/email"
            android:layout_below="@+id/textView"
            android:inputType="textEmailAddress"
            android:hint="@string/activity_filerequestbyemail_3"
            android:layout_marginTop="@dimen/first_box_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlackish"
            android:gravity="center"
            android:ems="10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/form_field_rectangle"
            android:padding="@dimen/box_padding"
            android:layout_marginLeft="@dimen/box_margin_left"
            android:layout_marginStart="@dimen/box_margin_left"
            android:layout_marginRight="@dimen/box_margin_left"
            android:layout_marginEnd="@dimen/box_margin_left"
            android:textColor="@color/colorMKSDriveGreen"/>

        <Button
            android:id="@+id/btnRequest"
            android:layout_below="@+id/email"
            android:text="@string/activity_filerequestbyemail_4"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/btn_margin_top"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:layout_width="@dimen/btn_confirm_width"
            android:layout_height="@dimen/btn_confirm_width"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@drawable/confirm_button"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>